# socket_pinger

./: .gitignore  CMakeLists.txt  README.md  run_three_clients.sh
include/client/: parsing.hpp
include/net_raii/: connection.hpp  file_descriptor.hpp  socket.hpp
include/server/: connection.hpp  cout_safe.hpp  file_descriptor.hpp  parsing.hpp  socket.hpp
src/client/: main.cpp  parsing.cpp
src/net_raii/: connection.cpp  file_descriptor.cpp  socket.cpp
src/server/: connection.cpp  file_descriptor.cpp  main.cpp  parsing.cpp  socket.cpp
